force-app/main/default/objects/malive__MALiveDailyTrip__c/malive__MALiveDailyTrip__c.object-meta.xml
<CustomObject>
    <label>MA Live Daily Trip</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>MA Live Daily Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Live Daily Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>