force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripCity__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripCity__c</fullName>
    <description>City where the start of the trip took place</description>
    <formula>malive__BeginTripStop__r.malive__City__c</formula>
    <inlineHelpText>City where the start of the trip took place</inlineHelpText>
    <label>Begin Trip City</label>
    <type>Text</type>
</CustomField>