force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripCountry__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripCountry__c</fullName>
    <description>Country where the start of the trip took place</description>
    <formula>malive__BeginTripStop__r.malive__Country__c</formula>
    <inlineHelpText>Country where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Country</label>
    <type>Text</type>
</CustomField>