force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripDateTime__c</fullName>
    <description>Time when this trip started</description>
    <formula>IF(ISPICKVAL(malive__BeginTripStop__r.malive__EventType__c, &quot;firstPoint&quot;), malive__BeginTripStop__r.malive__EventStarted__c, malive__BeginTripStop__r.malive__EventEnded__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time when this trip started</inlineHelpText>
    <label>Begin Trip Date/Time</label>
    <type>DateTime</type>
</CustomField>