force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripFullAddress__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripFullAddress__c</fullName>
    <description>Address where the start of the trip took place</description>
    <inlineHelpText>Address where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>