force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripPostalCode__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripPostalCode__c</fullName>
    <description>Postal Code where the start of the trip took place</description>
    <formula>malive__BeginTripStop__r.malive__Postal_Code__c</formula>
    <inlineHelpText>Postal Code where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Postal Code</label>
    <type>Text</type>
</CustomField>