force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripState__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripState__c</fullName>
    <description>State where the start of the trip took place</description>
    <formula>malive__BeginTripStop__r.malive__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State where the start of the trip took place</inlineHelpText>
    <label>Begin Trip State</label>
    <type>Text</type>
</CustomField>