force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripStop__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripStop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Stop Record, which is the start of this trip</description>
    <inlineHelpText>Lookup to the Stop Record, which is the start of this trip</inlineHelpText>
    <label>Begin Trip Stop</label>
    <referenceTo>malive__MALive_SummaryEvent__c</referenceTo>
    <relationshipName>BeginTripStops</relationshipName>
    <type>Lookup</type>
</CustomField>