force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__BeginTripStreet__c.field-meta.xml
<CustomField>
    <fullName>malive__BeginTripStreet__c</fullName>
    <description>Street where the start of the trip took place</description>
    <formula>malive__BeginTripStop__r.malive__Street_Address__c</formula>
    <inlineHelpText>Street where the start of the trip took place</inlineHelpText>
    <label>Begin Trip Street</label>
    <type>Text</type>
</CustomField>