force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__Driver__c.field-meta.xml
<CustomField>
    <fullName>malive__Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denoted driver of this trip</description>
    <inlineHelpText>Denoted driver of this trip</inlineHelpText>
    <label>Driver</label>
    <referenceTo>malive__MALiveDriver__c</referenceTo>
    <relationshipName>MADailyTrips</relationshipName>
    <type>Lookup</type>
</CustomField>