force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__DrivingDuringHoliday__c.field-meta.xml
<CustomField>
    <fullName>malive__DrivingDuringHoliday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indication if trip took place within denoted holiday off</description>
    <inlineHelpText>Indication if trip took place within denoted holiday off</inlineHelpText>
    <label>Driving During Holiday</label>
    <type>Checkbox</type>
</CustomField>