force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripCity__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripCity__c</fullName>
    <description>City where the end of the trip took place</description>
    <formula>malive__EndTripStop__r.malive__City__c</formula>
    <inlineHelpText>City where the end of the trip took place</inlineHelpText>
    <label>End Trip City</label>
    <type>Text</type>
</CustomField>