force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripCountry__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripCountry__c</fullName>
    <description>Country where the end of the trip took place</description>
    <formula>malive__EndTripStop__r.malive__Country__c</formula>
    <inlineHelpText>Country where the end of the trip took place</inlineHelpText>
    <label>End Trip Country</label>
    <type>Text</type>
</CustomField>