force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripDateTime__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripDateTime__c</fullName>
    <description>Time when this trip ended</description>
    <formula>malive__EndTripStop__r.malive__EventStarted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time when this trip ended</inlineHelpText>
    <label>End Trip Date/Time</label>
    <type>DateTime</type>
</CustomField>