force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripFullAddress__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripFullAddress__c</fullName>
    <description>Address where the end of the trip took place</description>
    <inlineHelpText>Address where the end of the trip took place</inlineHelpText>
    <label>End Trip Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>