force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripPostalCode__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripPostalCode__c</fullName>
    <description>Postal Code where the end of the trip took place</description>
    <formula>malive__EndTripStop__r.malive__Postal_Code__c</formula>
    <inlineHelpText>Postal Code where the end of the trip took place</inlineHelpText>
    <label>End Trip Postal Code</label>
    <type>Text</type>
</CustomField>