force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripState__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripState__c</fullName>
    <description>State where the end of the trip took place</description>
    <formula>malive__EndTripStop__r.malive__State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>State where the end of the trip took place</inlineHelpText>
    <label>End Trip State</label>
    <type>Text</type>
</CustomField>