force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__EndTripStreet__c.field-meta.xml
<CustomField>
    <fullName>malive__EndTripStreet__c</fullName>
    <description>Street where the end of the trip took place</description>
    <formula>malive__EndTripStop__r.malive__Street_Address__c</formula>
    <inlineHelpText>Street where the end of the trip took place</inlineHelpText>
    <label>End Trip Street</label>
    <type>Text</type>
</CustomField>