force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__StartUnixTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>malive__StartUnixTimeStamp__c</fullName>
    <label>Start Unix Time Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>