force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__TotalNumOfHardAccelEventsInTrip__c.field-meta.xml
<CustomField>
    <fullName>malive__TotalNumOfHardAccelEventsInTrip__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total # of hard accel events within this trip</description>
    <inlineHelpText>Total # of hard accel events within this trip</inlineHelpText>
    <label>Total # of Hard Accel Events this Trip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>