force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__TripDistanceKm__c.field-meta.xml
<CustomField>
    <fullName>malive__TripDistanceKm__c</fullName>
    <description>Aggregate of the kilometers of device messages between the 2 stops</description>
    <formula>ROUND(DISTANCE(malive__BeginTripStop__r.malive__Position__c, malive__EndTripStop__r.malive__Position__c, &apos;km&apos;),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Aggregate of the kilometers of device messages between the 2 stops</inlineHelpText>
    <label>(DO NOT USE)Trip Distance (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>