force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__TripOrder__c.field-meta.xml
<CustomField>
    <fullName>malive__TripOrder__c</fullName>
    <description>The Order of Trips throughout the day</description>
    <inlineHelpText>The Order of Trips throughout the day</inlineHelpText>
    <label>Trip Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>