force-app/main/default/objects/malive__MALiveDailyTrip__c/fields/malive__TripWindshieldTimeHours__c.field-meta.xml
<CustomField>
    <fullName>malive__TripWindshieldTimeHours__c</fullName>
    <description>Duration of this trip, in hours</description>
    <formula>ROUND((malive__EndTripStop__r.malive__EventStarted__c - malive__BeginTripStop__r.malive__EventEnded__c)*24, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration of this trip, in hours</inlineHelpText>
    <label>Trip Drive Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>